# libcmd

./: .clang-format  .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt
include/: command.h  communication.h  handler.h  message.h  result.h
src/: main.cpp
tests/: CMakeLists.txt
tests/src/: command.test.cpp  dummy.test.cpp  handler.test.cpp  message.test.cpp
